# NameDrop

./: .gitignore  CHANGELOG.md  PLATFORM-RESTRICTIONS.md  README.md  character_utils.py  file_operations.py  main.py  menu.sh  pyproject.toml
docs/: filename-restrictions.md  platform-restrictions.md
src/namedrop/: __init__.py  character_utils.py  file_operations.py  main.py
src/namedrop/ui/: main.ui
