[project]
name = "namedrop"
version = "0.1.0"
description = "A PySide6 application to rename files/folders with non-standard ASCII characters for cross-platform compatibility"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Rich Lewis"}
]
dependencies = [
    "PySide6>=6.5.0,<6.10.0",
]
