[project]
name = "namedrop"
version = "0.1.0"
description = "A PySide6 application to rename files/folders with non-standard ASCII characters for cross-platform compatibility"
readme = "README.md"
requires-python = ">=3.12.12,<3.13" # because the maximum Python version that supports PySide6 6.7.3 is Python 3.12.x
authors = [
    {name = "Rich Lewis", GitHub = "@RichLewis007"}
]
dependencies = [
  "PySide6==6.7.3", # The max version MBP macOS supports
]

[project.scripts]
namedrop = "namedrop.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build]
packages = ["src/namedrop"]
include = ["src/namedrop/ui/*.ui"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]
